--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,8 @@
 }
 
 body {
-  background-image: url("./images/laptop_black.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-color: black;
+  background-color: black !important;
+  color: white !important;
 }
 
 .container {
